# AiChamp-RLTask

./: .env.example  .gitignore  README.md  pyproject.toml  run_trials.py
results/: all_runs.json  pass_rate.txt
task/: grader.py  prompt.txt
task/data/: DATASET_COMPARISON.md  ml_dataset.csv  sample_dataset.csv
