[project]
name = "rl-task-anthropic"
version = "0.1.0"
description = "RL Task for LLM Training - Data Preprocessing Pipeline Challenge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.67.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0", 
    "scikit-learn>=1.3.0",
]
